galeria con grid

--- a/index.html
+++ b/index.html
@@ -25,6 +25,46 @@
             <p>メ</p>
         </dir>
     </header>
+    <main>
+        <div class="gallery-container">
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
