--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="#characters">characters</a>
                 </li>
                 <li>
-                    <a class="nav__box" href="#contact">contact</a>
+                    <a class="nav__box" href="mailto:anapaulamoralesdulzaides@gmail.com">contact</a>
                 </li>
             </ul>
         </nav>
@@ -26,45 +26,52 @@
         </dir>
     </header>
     <main>
-        <div class="gallery-container">
+        <div class="gallery-container" id="characters">
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/sTFWQ9i.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/4L1890K.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/H9ddNTq.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/mfJI1GW.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/7zmZjnK.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/dd2mJ30.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/bP2L0rD.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/gC5uIbX.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/E2Lgj10.jpg" alt="">
+                <img class="gallery__img" src="https://imgur.com/0KDB5An.jpg" alt="">
+                <!-- <h2 class="gallery__title">nombre</h2> -->
+            </div>
+            <div class="gallery__item">
+                <img class="gallery__img" src="https://imgur.com/3dv6ToG.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
         </div>
     </main>
+    <footer>
+        <p>Copyright ©2021 Ana Paula</p>
+    </footer>
     
 </body>
 </html>
