--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Animet</title>
+    <title>Anime</title>
 </head>
 <body>
     <header>
@@ -18,13 +18,13 @@
                     <a class="nav__box" href="mailto:anapaulamoralesdulzaides@gmail.com">contact</a>
                 </li>
             </ul>
-        </nav>
+        </nav>  
         <div class="hero">
             <p>ア</p>
             <p>ニ</p>
             <p>メ</p>
-        </dir>
-    </header>
+        </div>
+        </header>
     <main>
         <div class="gallery-container" id="characters">
             <div class="gallery__item">
