--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
-                <img class="gallery__img" src="https://imgur.com/mfJI1GW.jpg" alt="">
+                <img class="gallery__img" src="react-bootstrap.jpg" alt="">
                 <!-- <h2 class="gallery__title">nombre</h2> -->
             </div>
             <div class="gallery__item">
